docs index page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,13 @@
         }
     }
 }
+
+.doc-list {
+    list-style-type: none;
+    margin-bottom: 0px;
+    line-height: 1;
+    h2 {
+        margin-bottom: 0px;
+        font-size: 16px;
+    }
+}
