--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -153,8 +153,7 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width: $content-width;
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -162,8 +161,7 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        max-width: $content-width;
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
@@ -217,4 +215,14 @@ table {
   font-size: .9em;
   border-radius: 4px;
   border: 1px solid #c7254e;
+}
+
+.btn-nav {
+    background-color: #f8f8f8;
+    padding: 5px !important;
+    margin: 10px;
+
+    &:hover {
+        background-color: #f8f8f8;
+    }
 }
