--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,14 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <ul class="contact-list">
+          <li>
+            <span class="text">{{ site.description }}</span>
+          </li>
+          <li>
+            <a href="/privacy-policy">Privacy Policy</a>
+          </li>
+        </ul>
       </div>
     </div>
 
