move description so more room for linkage in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <h2 class="footer-heading"><span>{{ site.title }}</span><span class="text">{{ site.description }}</span></h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
@@ -47,9 +47,6 @@
 
       <div class="footer-col  footer-col-3">
         <ul class="contact-list">
-          <li>
-            <span class="text">{{ site.description }}</span>
-          </li>
           <li>
             <a href="/privacy-policy">Privacy Policy</a>
           </li>
