--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -99,6 +99,10 @@
 .footer-heading {
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
+
+    .text {
+      float: right;
+    }
 }
 
 .contact-list,
