change jobs to requests

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
       <div class="trigger">
         <a class="page-link" href="/docs">Docs</a>
-        <a class="page-link btn btn-default btn-nav" href="{{ site.appurl }}">Sign in</a>
+        <a class="page-link" href="{{ site.appurl }}">App</a>
       </div>
     </nav>
 
