--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="/blog">Blog</a>
         <a class="page-link" href="/docs">Docs</a>
         <a class="page-link" href="{{ site.appurl }}">App</a>
       </div>
